@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: 3970862eae76a43ae8da039a7872169e
+guid: 2ea7549548dbf43989745d4ed68ffaf6
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
