@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: 3970862eae76a43ae8da039a7872169e
+guid: 96cacbaa5babd44b9a3cfb1d9e7ab77e
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
