@@ -1,5 +1,5 @@
 fileFormatVersion: 2
-guid: 3970862eae76a43ae8da039a7872169e
+guid: a6065cfaf15a043eca765773b4d17317
 TextureImporter:
   fileIDToRecycleName: {}
   externalObjects: {}
