@@ -194,6 +194,7 @@
 		{ "key": "foundPath_event", "value": "Peaking over the hills, you spot the start of the path." },
 		{ "key": "lostPouch_event", "value": "You see a bag dropped by someone wandering the wastes." },
 		{ "key": "greyMerchant_event", "value": "Looks like you're not the only human walking these roads today.\nSeems to be a trader of some sort." },
+		{ "key": "greyMerchantPlus_event", "value": "A merchant covered in a long coat passes by." },
 		{ "key": "outpostCandle_event", "value": "A lonely outpost is standing in the distance." },
 		{ "key": "forkedRoad_event", "value": "There's a fork in the road." },
 		{ "key": "theGreyWastes_event", "value": "The Grey Wastes were aptly named. Only a fool would travel these lands. Looks like this is the start of the path." },
@@ -276,6 +277,9 @@
 		{ "key": "greyMerchant0_int", "value": "Shop" },
 		{ "key": "greyMerchant1_int", "value": "Talk" },
 		{ "key": "greyMerchant2_int", "value": "Umaria?" },
+		{ "key": "greyMerchantPlus0_int", "value": "Shop" },
+		{ "key": "greyMerchantPlus1_int", "value": "Talk" },
+		{ "key": "greyMerchantPlus2_int", "value": "Umaria?" },
 		{ "key": "outpostCandle0_int", "value": "Rest" },
 		{ "key": "outpostCandle1_int", "value": "Revive" },
 		{ "key": "outpostCandle2_int", "value": "Rekindle" },
@@ -435,6 +439,18 @@
 		{ "key": "greyMerchant2_1_res", "value": "\"Queen Era has been deathly ill. Many are fleeing Umaria fearing its the same plague that wiped out Fort Eons.\"" },
 		{ "key": "greyMerchant2_2_res", "value": "\"You're heading to Umaria? You can cut across\nthose hills over there to save some time. But why now?\"" },
 		{ "key": "greyMerchant2_3_res", "value": "\"I'm heading south to Epoc so I can't really guide you.\nBut I can loan you some rations for the road. Stay safe.\"" },
+		{ "key": "greyMerchantPlus0_0_res", "value": "\"Let's see what Ashphod's Grey Merchants can offer you.\"" },
+		{ "key": "greyMerchantPlus0_1_res", "value": "\"Ashphod's Grey Merchants at your service.\"" },
+		{ "key": "greyMerchantPlus0_2_res", "value": "\"I'm currently coming back from Lastmorne.\nI don't have much, but have a look.\"" },
+		{ "key": "greyMerchantPlus0_3_res", "value": "\"Some of my buddies call me crazy for transporting candles,\nbut someone's gotta do it.\"" },
+		{ "key": "greyMerchantPlus1_0_res", "value": "\"Say, how about you see some of my wares? Lord Ashphod doesn't care who buys our goods, as long as they're human.\"" },
+		{ "key": "greyMerchantPlus1_1_res", "value": "\"What happened to your faces? Don't tell me there's two plagues...\"" },
+		{ "key": "greyMerchantPlus1_2_res", "value": "\"I'm a little lost myself, but I have no fear,\nfor this trusty road is always here for me.\"" },
+		{ "key": "greyMerchantPlus1_3_res", "value": "\"The Grey Wastes are dangerous for most commonfolk. Why are you out here?\"" },
+		{ "key": "greyMerchantPlus2_0_res", "value": "\"Umaria? You two know what happened to Fort Eons right?\"" },
+		{ "key": "greyMerchantPlus2_1_res", "value": "\"Lord Ashphod stopped all trade routes to Umaria a month ago.\nUnless you got business with the queen, I wouldn't go there.\"" },
+		{ "key": "greyMerchantPlus2_2_res", "value": "\"You're actually pretty close if I remember right.\nTry taking a shortcut by the hills over there.\"" },
+		{ "key": "greyMerchantPlus2_3_res", "value": "\"Normally I'd help for a price, but neither of you looks well.\nTake some of my emergency meds, just stay away from me!\"" },
 		{ "key": "outpostCandle0_0_res", "value": "The warmth is rejuvenating. Its as if your youth has returned to you." },
 		{ "key": "outpostCandle1_0_res", "value": "The magic of the fire can bring anyone back from the brink." },
 		{ "key": "outpostCandle2_0_res", "value": "While larger candles recharge on their own,\nsmaller ones seem to need a little help." },
@@ -837,7 +853,7 @@
 		{ "key": "bloodsworn_skill_des", "value": "Increases PATK by 30%, but your attacks now cost HP" },
 		{ "key": "vampiricMail_skill_title", "value": "Vampiric Mail" },
 		{ "key": "vampiricMail_skill_sub", "value": "Passive" },
-		{ "key": "vampiricMail_skill_des", "value": "Enemies that attack you have a 50% to bleed for 2 turns" },
+		{ "key": "vampiricMail_skill_des", "value": "Enemies that attack you have a 50% chance to bleed for 2 turns" },
 		{ "key": "frost_skill_title", "value": "Frost" },
 		{ "key": "frost_skill_sub", "value": "Active" },
 		{ "key": "frost_skill_des", "value": "Weak magical attack with a decent chance\nto freeze" },
@@ -953,7 +969,7 @@
 		{ "key": "miracle_description", "value": "Has PDEF and MDEF increased by 9999" },
 		{ "key": "fatalWound_title", "value": "Fatal Wound" },
 		{ "key": "fatalWound_sub", "value": "Permanent Debuff" },
-		{ "key": "fatalWound_description", "value": "Losing 30% of its max HP at the end of its turn " },
+		{ "key": "fatalWound_description", "value": "Losing 20% of its max HP at the end of its turn " },
 		{ "key": "vampire_title", "value": "Vampire" },
 		{ "key": "vampire_sub", "value": "Buff" },
 		{ "key": "vampire_description", "value": "Has Bleed Plus (increased bleed damage)" },
